--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: java
-jdk: 
-- openjdk8  
-script: ant build
+jdk:
+- openjdk8
+
+addons:
+  sonarcloud:
+    organization: dfalessi
+    token: d9f7925b8b9eabb87dc57ef5689cb0793e2e5825
+script:
+- ant build
+- sonar-scanner
